--- a/templates/index.html
+++ b/templates/index.html
@@ -267,13 +267,13 @@
 
     <footer>
       <div class="links">
-        <span>Made with ❤️ by Lakshit Jain</span>
-        <a href="https://www.linkedin.com/in/jainlakshit" target="_blank" rel="noopener">
+        <span>Made with ❤️ by Nikhil Singh</span>
+        <a href="https://www.linkedin.com/in/nikhilll9/" target="_blank" rel="noopener">
           <!-- LinkedIn SVG -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M20.447 20.452H17.21v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.447-2.136 2.943v5.663H9.001V9h3.112v1.561h.044c.433-.82 1.492-1.686 3.07-1.686 3.286 0 3.89 2.164 3.89 4.98v6.597zM5.337 7.433a1.805 1.805 0 11-.002-3.61 1.805 1.805 0 01.002 3.61zM6.999 20.452H3.67V9h3.33v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/></svg>
           LinkedIn
         </a>
-        <a href="https://github.com/lakshitcodes/Brain_Tumor-MRI-Classification" target="_blank" rel="noopener">
+        <a href="https://github.com/NerdNikhil/Brain-Tumor-MRI-Classification" target="_blank" rel="noopener">
           <!-- GitHub SVG -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M12 .5C5.73.5.98 5.24.98 11.52c0 4.86 3.15 8.98 7.51 10.43.55.1.75-.24.75-.53 0-.26-.01-1.13-.02-2.05-3.06.67-3.71-1.3-3.71-1.3-.5-1.27-1.21-1.61-1.21-1.61-.99-.67.08-.66.08-.66 1.1.08 1.68 1.13 1.68 1.13.98 1.68 2.57 1.2 3.2.92.1-.72.39-1.2.71-1.48-2.44-.28-5-1.22-5-5.43 0-1.2.43-2.18 1.13-2.95-.12-.28-.49-1.41.1-2.94 0 0 .93-.3 3.05 1.12.88-.25 1.82-.38 2.76-.39.94.01 1.88.14 2.76.39 2.11-1.42 3.04-1.12 3.04-1.12.6 1.53.23 2.66.11 2.94.7.77 1.13 1.75 1.13 2.95 0 4.22-2.57 5.14-5.02 5.41.4.34.75 1.01.75 2.05 0 1.48-.01 2.68-.01 3.05 0 .29.2.64.76.53 4.35-1.45 7.5-5.57 7.5-10.43C23.02 5.24 18.27.5 12 .5z"/></svg>
           GitHub
